# my_tapd

./: .env.example  .gitignore  Cargo.toml  Dockerfile.backend  docker-compose.yaml
.kiro/specs/it-requirements-management-system/: .config.kiro  design.md  requirements.md  tasks.md
frontend/: Dockerfile.frontend  deno.json  index.html  nginx.conf  vite.config.ts
frontend/src/api/: auth.ts  client.ts  iterations.ts  notifications.ts  projects.ts  reports.ts  workItems.ts
frontend/src/composables/: useNotification.ts  usePagination.ts  useWebSocket.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  notification.ts  project.ts  workitem.ts
frontend/src/types/: api.ts  domain.ts  enums.ts
migrations/: 20240101000000_initial.sql
proptest-regressions/service/: iteration_tests.txt
src/: config.rs  db.rs  error.rs  main.rs
src/api/: auth.rs  iterations.rs  middleware.rs  mod.rs  notifications.rs  projects.rs  reports.rs  router.rs  search.rs  work_items.rs
src/domain/: audit.rs  functions.rs  iteration.rs  mod.rs  notification.rs  project.rs  tests_property.rs  user.rs  work_item.rs
src/repository/: audit_repo.rs  iteration_repo.rs  mod.rs  notification_repo.rs  project_repo.rs  user_repo.rs  work_item_repo.rs
src/service/: auth_service.rs  auth_tests.rs  iteration_service.rs  iteration_tests.rs  mod.rs  notification_service.rs  notification_tests.rs  project_service.rs  project_tests.rs  report_service.rs  search_report_tests.rs  search_service.rs  work_item_service.rs  work_item_tests.rs
src/ws/: handler.rs
(+26 files in other folders)
